# rust-language

./: Cargo.toml  README.md
docs/notes/: root.md  rust-language.basics.md
sample/hello-rust/src/: main.rs
source/examples/chapter_1/: ex_1_01_hello_world.rs
source/examples/chapter_2/: ex_2_03_guessing_game_rand_match.rs  ex_2_07_guessing_game.rs
source/examples/chapter_2_Guessing_Game/: ex_2_01_guessing_game.rs  ex_2_02_guessing_game_rand.rs  ex_2_04_guessing_game_loop.rs  ex_2_05_guessing_game_loop_quit.rs  ex_2_06_guessing_game_invalid_input.rs
source/examples/chapter_3_Foundations/: ex_3_01_variable_mutability.rs  ex_3_02_datatypes.rs  ex_3_03_numeric_operations.rs  ex_3_04_compound_types.rs  ex_3_05_functions.rs  ex_3_06_control_flow.rs
source/examples/chapter_4_Ownership/: ex_4_01_ownership.rs  ex_4_02_ownership_return_scope.rs  ex_4_03_return_multiple.rs  ex_4_04_reference_borrowing.rs  ex_4_05_borrow_modify.rs  ex_4_06_mutable_references.rs  ex_4_07_dangling_ptrs.rs  ex_4_08_slices.rs
source/examples/chapter_5_Structures/: ex_5_01_struct.rs  ex_5_02_struct_functions.rs  ex_5_03_struct_tuples.rs  ex_5_04_unit_like_struct.rs  ex_5_05_rectangle_area.rs  ex_5_06_struct_debug.rs  ex_5_07_struct_methods.rs  ex_5_08_struct_methods_params.rs  ex_5_09_struct_associated_functions.rs
source/examples/chapter_6_Enumerations/: ex_6_01_enums.rs  ex_6_02_enums_structs.rs  ex_6_03_enums_associations.rs  ex_6_04_enum_variants.rs  ex_6_05_enum_options.rs  ex_6_06_enum_match.rs  ex_6_07_enum_options_match.rs  ex_6_08_enum_dice_roll.rs  ex_6_09_if_let.rs
(+3 files in other folders)
