[package]
name = "rust-language" # Cargo required
version = "0.1.0" # Cargo required
edition = "2021"
authors = ["ElectronAmpere <learningthiruvalluvar@gmail.com"]
readme = "README.md"
repository = "https://github.com/ElectronAmpere/rust-language/"
license-file = "LICENSE.txt"
#workspace = "/rust-language"
include = ["/source","/docs","/reference","/sample"]

[[bin]]
name = "rust-language"
path = "source/examples/chapter_1/ex_1_01_hello_world.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
